Version 0.5 - June 22, 2010
===========================
- Cleanup.

Version 0.4 - June 18, 2010
===========================
- Added configurable options to set reCAPTCHA widget.


Version 0.3 - June 18, 2010
===========================
- Added reCAPTCHA support.


Version 0.2 - June 18, 2010
===========================
- Fixed an import error.


Version 0.1 - June 18, 2010
===========================
- Initial version.